@@ -1,13 +1,13 @@
 =begin
 == NAME
 tDiary: the "tsukkomi-able" web diary system.
-tdiary.rb $Revision: 1.212 $
+tdiary.rb $Revision: 1.213 $
 
 Copyright (C) 2001-2005, TADA Tadashi <sho@spc.gr.jp>
 You can redistribute it and/or modify it under GPL2.
 =end
 
-TDIARY_VERSION = '2.1.0.20050515'
+TDIARY_VERSION = '2.1.0.20050516'
 
 require 'cgi'
 begin
@@ -1173,9 +1173,9 @@ module TDiary
 		def do_eval_rhtml( prefix )
 			super
 			@plugin.instance_eval { update_proc }
-			anchor = @plugin.instance_eval( %Q[anchor "#{@diary.date.strftime('%Y%m%d')}"].untaint )
+			anchor_str = @plugin.instance_eval( %Q[anchor "#{@diary.date.strftime('%Y%m%d')}"].untaint )
 			clear_cache( /(latest|#{@date.strftime( '%Y%m' )})/ )
-			raise ForceRedirect::new( "#{@conf.index}#{anchor}" )
+			raise ForceRedirect::new( "#{@conf.index}#{anchor_str}" )
 		end
 	end
 
@@ -1504,8 +1504,8 @@ module TDiary
 		def do_eval_rhtml( prefix )
 			load_plugins
 			@plugin.instance_eval { update_proc } if @comment
-			anchor = @plugin.instance_eval( %Q[anchor "#{@diary.date.strftime('%Y%m%d')}"].untaint )
-			raise ForceRedirect::new( "#{@conf.index}#{anchor}#c#{'%02d' % @diary.count_comments( true )}" )
+			anchor_sr = @plugin.instance_eval( %Q[anchor "#{@diary.date.strftime('%Y%m%d')}"].untaint )
+			raise ForceRedirect::new( "#{@conf.index}#{anchor_str}#c#{'%02d' % @diary.count_comments( true )}" )
 		end
 	end
 
@@ -1797,8 +1797,8 @@ RSSFOOT
 	class TDiaryTrackBackShow < TDiaryTrackBackBase
 		def eval_rhtml( prefix = '' )
 			load_plugins
-			anchor = @plugin.instance_eval(%Q|anchor "#{@date.strftime('%Y%m%d')}"|)
-			url = "#{@conf.index}#{anchor}#t"
+			anchor_str = @plugin.instance_eval(%Q|anchor "#{@date.strftime('%Y%m%d')}"|)
+			url = "#{@conf.index}#{anchor_str}#t"
 			url[0, 0] = '../' if %r|^https?://|i !~ @conf.index
 			raise ForceRedirect::new( url )
 		end
