@@ -1,3 +1,6 @@
+2005-05-16  Kazuhiko  <kazuhiko@fdiary.net>
+	* tdiary.rb: support ruby 1.9 HEAD.
+
 2005-05-15  Kazuhiko  <kazuhiko@fdiary.net>
 	* tdiary.rb: support ruby 1.9 HEAD.
 	* tdiary/defaultio.rb: close open file only in 'ensure'.
